karnc/tests/fixtures/negative/115_queue_bad_params/src/svc.karn
context svc

type Msg = { a: String }

service worker {
  on queue "q" (message: Msg, extra: String) -> Effect[Result[(), String]] {
    Ok(())
  }
}
